--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - 3.7
 before_install:
   - pip install -U pytest
-  - pip install -r requirements.txt
+  - pip install .
 install:
   - pip install ".[test]" . # install package + test dependencies
 script: pytest scanphyslog2bids/tests.py # run tests
