--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: python
 python:
   - 3.7
 before_install:
-  - pip install -U pytest
-  - pip install .
+  - pip install -U pytes
 install:
   - pip install ".[test]" . # install package + test dependencies
 script: pytest scanphyslog2bids/tests.py # run tests
